parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BY
    DATEPART
    DELETE
    DISTINCT
    DIV
    DO
    ELSE
    FOR
    GROUP
    HAVING
    IF
    INNER
    ISNULL
    JOIN
    LEFT
    MAIORIGUAL
    MAIORQ
    MENORIGUAL
    MENORQ
    NUMERO
    ON
    ORDER
    PERCE
    PRINT
    RIGHT
    SOMA
    SUB
    UPDATE

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> criartabela
Rule 2     inicio -> inserirdados
Rule 3     inicio -> criartabela inicio
Rule 4     inicio -> inserirdados inicio
Rule 5     literal -> NUMFLOAT
Rule 6     literal -> NUMINTEIRO
Rule 7     literal -> STRING
Rule 8     criartabela -> CREATE TABLE ID ABREPARENTESES tabelacolunas FECHAPARENTESES
Rule 9     inserirdados -> INSERT INTO ID VALUES ABREPARENTESES dadosinseridos FECHAPARENTESES
Rule 10    dadosinseridos -> literal
Rule 11    dadosinseridos -> literal VIRGULA dadosinseridos
Rule 12    tipo -> INT
Rule 13    tipo -> VARCHAR ABREPARENTESES NUMINTEIRO FECHAPARENTESES
Rule 14    tipo -> NUMERIC
Rule 15    tipo -> DATETIME
Rule 16    tipo -> NUMFLOAT
Rule 17    sufixotable -> NOT NULL
Rule 18    sufixotable -> NULL
Rule 19    sufixotable -> NOT NULL PRIMARY KEY
Rule 20    tabelacolunas -> ID tipo sufixotable
Rule 21    tabelacolunas -> ID tipo
Rule 22    tabelacolunas -> ID tipo sufixotable VIRGULA tabelacolunas
Rule 23    tabelacolunas -> ID tipo VIRGULA tabelacolunas
Rule 24    comando -> declarevar
Rule 25    comando -> select
Rule 26    comando -> open
Rule 27    comando -> inserirdados
Rule 28    comando -> close
Rule 29    comando -> dadossemtipo
Rule 30    comando -> deallocate
Rule 31    comando -> while
Rule 32    comando -> begin
Rule 33    comando -> listtypedid
Rule 34    declarevar -> DECLARE listtypedid
Rule 35    comandos -> comando
Rule 36    comandos -> comando comandos
Rule 37    select -> SELECT listtypedid FROM ID
Rule 38    select -> SELECT MUL FROM ID
Rule 39    select -> SELECT SUM ABREPARENTESES ID FECHAPARENTESES FROM ID WHERE ID IGUAL ID
Rule 40    deallocate -> DEALLOCATE ID
Rule 41    listtypedid -> ID tipo
Rule 42    listtypedid -> ID tipo VIRGULA listtypedid
Rule 43    dadossemtipo -> ID
Rule 44    dadossemtipo -> ID VIRGULA dadossemtipo
Rule 45    while -> WHILE ABREPARENTESES ID IGUAL ZERO FECHAPARENTESES comandos
Rule 46    procedure -> CREATE OR ALTER PROCEDURE ID AS begin comandos close deallocate END
Rule 47    open -> OPEN ID
Rule 48    close -> CLOSE ID
Rule 49    fetch -> FETCH ID INTO dadossemtipo
Rule 50    begin -> BEGIN comandos END
Rule 51    begin -> BEGIN set comandos END
Rule 52    set -> SET ID IGUAL ABREPARENTESES select FECHAPARENTESES
Rule 53    if -> ID IGUAL STRING
Rule 54    if -> ID IGUAL NUMINTEIRO
Rule 55    if -> ID IGUAL NUMFLOAT
Rule 56    exec -> EXEC ID dadossemtipo OUTPUT

Terminals, with rules where they appear

ABREPARENTESES       : 8 9 13 39 45 52
ALTER                : 46
AS                   : 46
BEGIN                : 50 51
BY                   : 
CLOSE                : 48
CREATE               : 8 46
DATEPART             : 
DATETIME             : 15
DEALLOCATE           : 40
DECLARE              : 34
DELETE               : 
DISTINCT             : 
DIV                  : 
DO                   : 
ELSE                 : 
END                  : 46 50 51
EXEC                 : 56
FECHAPARENTESES      : 8 9 13 39 45 52
FETCH                : 49
FOR                  : 
FROM                 : 37 38 39
GROUP                : 
HAVING               : 
ID                   : 8 9 20 21 22 23 37 38 39 39 39 39 40 41 42 43 44 45 46 47 48 49 52 53 54 55 56
IF                   : 
IGUAL                : 39 45 52 53 54 55
INNER                : 
INSERT               : 9
INT                  : 12
INTO                 : 9 49
ISNULL               : 
JOIN                 : 
KEY                  : 19
LEFT                 : 
MAIORIGUAL           : 
MAIORQ               : 
MENORIGUAL           : 
MENORQ               : 
MUL                  : 38
NOT                  : 17 19
NULL                 : 17 18 19
NUMERIC              : 14
NUMERO               : 
NUMFLOAT             : 5 16 55
NUMINTEIRO           : 6 13 54
ON                   : 
OPEN                 : 47
OR                   : 46
ORDER                : 
OUTPUT               : 56
PERCE                : 
PRIMARY              : 19
PRINT                : 
PROCEDURE            : 46
RIGHT                : 
SELECT               : 37 38 39
SET                  : 52
SOMA                 : 
STRING               : 7 53
SUB                  : 
SUM                  : 39
TABLE                : 8
UPDATE               : 
VALUES               : 9
VARCHAR              : 13
VIRGULA              : 11 22 23 42 44
WHERE                : 39
WHILE                : 45
ZERO                 : 45
error                : 

Nonterminals, with rules where they appear

begin                : 32 46
close                : 28 46
comando              : 35 36
comandos             : 36 45 46 50 51
criartabela          : 1 3
dadosinseridos       : 9 11
dadossemtipo         : 29 44 49 56
deallocate           : 30 46
declarevar           : 24
exec                 : 
fetch                : 
if                   : 
inicio               : 3 4 0
inserirdados         : 2 4 27
listtypedid          : 33 34 37 42
literal              : 10 11
open                 : 26
procedure            : 
select               : 25 52
set                  : 51
sufixotable          : 20 22
tabelacolunas        : 8 22 23
tipo                 : 20 21 22 23 41 42
while                : 31

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . criartabela
    (2) inicio -> . inserirdados
    (3) inicio -> . criartabela inicio
    (4) inicio -> . inserirdados inicio
    (8) criartabela -> . CREATE TABLE ID ABREPARENTESES tabelacolunas FECHAPARENTESES
    (9) inserirdados -> . INSERT INTO ID VALUES ABREPARENTESES dadosinseridos FECHAPARENTESES

    CREATE          shift and go to state 4
    INSERT          shift and go to state 5

    inicio                         shift and go to state 1
    criartabela                    shift and go to state 2
    inserirdados                   shift and go to state 3

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> criartabela .
    (3) inicio -> criartabela . inicio
    (1) inicio -> . criartabela
    (2) inicio -> . inserirdados
    (3) inicio -> . criartabela inicio
    (4) inicio -> . inserirdados inicio
    (8) criartabela -> . CREATE TABLE ID ABREPARENTESES tabelacolunas FECHAPARENTESES
    (9) inserirdados -> . INSERT INTO ID VALUES ABREPARENTESES dadosinseridos FECHAPARENTESES

    $end            reduce using rule 1 (inicio -> criartabela .)
    CREATE          shift and go to state 4
    INSERT          shift and go to state 5

    criartabela                    shift and go to state 2
    inicio                         shift and go to state 6
    inserirdados                   shift and go to state 3

state 3

    (2) inicio -> inserirdados .
    (4) inicio -> inserirdados . inicio
    (1) inicio -> . criartabela
    (2) inicio -> . inserirdados
    (3) inicio -> . criartabela inicio
    (4) inicio -> . inserirdados inicio
    (8) criartabela -> . CREATE TABLE ID ABREPARENTESES tabelacolunas FECHAPARENTESES
    (9) inserirdados -> . INSERT INTO ID VALUES ABREPARENTESES dadosinseridos FECHAPARENTESES

    $end            reduce using rule 2 (inicio -> inserirdados .)
    CREATE          shift and go to state 4
    INSERT          shift and go to state 5

    inserirdados                   shift and go to state 3
    inicio                         shift and go to state 7
    criartabela                    shift and go to state 2

state 4

    (8) criartabela -> CREATE . TABLE ID ABREPARENTESES tabelacolunas FECHAPARENTESES

    TABLE           shift and go to state 8


state 5

    (9) inserirdados -> INSERT . INTO ID VALUES ABREPARENTESES dadosinseridos FECHAPARENTESES

    INTO            shift and go to state 9


state 6

    (3) inicio -> criartabela inicio .

    $end            reduce using rule 3 (inicio -> criartabela inicio .)


state 7

    (4) inicio -> inserirdados inicio .

    $end            reduce using rule 4 (inicio -> inserirdados inicio .)


state 8

    (8) criartabela -> CREATE TABLE . ID ABREPARENTESES tabelacolunas FECHAPARENTESES

    ID              shift and go to state 10


state 9

    (9) inserirdados -> INSERT INTO . ID VALUES ABREPARENTESES dadosinseridos FECHAPARENTESES

    ID              shift and go to state 11


state 10

    (8) criartabela -> CREATE TABLE ID . ABREPARENTESES tabelacolunas FECHAPARENTESES

    ABREPARENTESES  shift and go to state 12


state 11

    (9) inserirdados -> INSERT INTO ID . VALUES ABREPARENTESES dadosinseridos FECHAPARENTESES

    VALUES          shift and go to state 13


state 12

    (8) criartabela -> CREATE TABLE ID ABREPARENTESES . tabelacolunas FECHAPARENTESES
    (20) tabelacolunas -> . ID tipo sufixotable
    (21) tabelacolunas -> . ID tipo
    (22) tabelacolunas -> . ID tipo sufixotable VIRGULA tabelacolunas
    (23) tabelacolunas -> . ID tipo VIRGULA tabelacolunas

    ID              shift and go to state 14

    tabelacolunas                  shift and go to state 15

state 13

    (9) inserirdados -> INSERT INTO ID VALUES . ABREPARENTESES dadosinseridos FECHAPARENTESES

    ABREPARENTESES  shift and go to state 16


state 14

    (20) tabelacolunas -> ID . tipo sufixotable
    (21) tabelacolunas -> ID . tipo
    (22) tabelacolunas -> ID . tipo sufixotable VIRGULA tabelacolunas
    (23) tabelacolunas -> ID . tipo VIRGULA tabelacolunas
    (12) tipo -> . INT
    (13) tipo -> . VARCHAR ABREPARENTESES NUMINTEIRO FECHAPARENTESES
    (14) tipo -> . NUMERIC
    (15) tipo -> . DATETIME
    (16) tipo -> . NUMFLOAT

    INT             shift and go to state 18
    VARCHAR         shift and go to state 19
    NUMERIC         shift and go to state 20
    DATETIME        shift and go to state 21
    NUMFLOAT        shift and go to state 22

    tipo                           shift and go to state 17

state 15

    (8) criartabela -> CREATE TABLE ID ABREPARENTESES tabelacolunas . FECHAPARENTESES

    FECHAPARENTESES shift and go to state 23


state 16

    (9) inserirdados -> INSERT INTO ID VALUES ABREPARENTESES . dadosinseridos FECHAPARENTESES
    (10) dadosinseridos -> . literal
    (11) dadosinseridos -> . literal VIRGULA dadosinseridos
    (5) literal -> . NUMFLOAT
    (6) literal -> . NUMINTEIRO
    (7) literal -> . STRING

    NUMFLOAT        shift and go to state 26
    NUMINTEIRO      shift and go to state 27
    STRING          shift and go to state 28

    dadosinseridos                 shift and go to state 24
    literal                        shift and go to state 25

state 17

    (20) tabelacolunas -> ID tipo . sufixotable
    (21) tabelacolunas -> ID tipo .
    (22) tabelacolunas -> ID tipo . sufixotable VIRGULA tabelacolunas
    (23) tabelacolunas -> ID tipo . VIRGULA tabelacolunas
    (17) sufixotable -> . NOT NULL
    (18) sufixotable -> . NULL
    (19) sufixotable -> . NOT NULL PRIMARY KEY

    FECHAPARENTESES reduce using rule 21 (tabelacolunas -> ID tipo .)
    VIRGULA         shift and go to state 30
    NOT             shift and go to state 31
    NULL            shift and go to state 32

    sufixotable                    shift and go to state 29

state 18

    (12) tipo -> INT .

    VIRGULA         reduce using rule 12 (tipo -> INT .)
    NOT             reduce using rule 12 (tipo -> INT .)
    NULL            reduce using rule 12 (tipo -> INT .)
    FECHAPARENTESES reduce using rule 12 (tipo -> INT .)


state 19

    (13) tipo -> VARCHAR . ABREPARENTESES NUMINTEIRO FECHAPARENTESES

    ABREPARENTESES  shift and go to state 33


state 20

    (14) tipo -> NUMERIC .

    VIRGULA         reduce using rule 14 (tipo -> NUMERIC .)
    NOT             reduce using rule 14 (tipo -> NUMERIC .)
    NULL            reduce using rule 14 (tipo -> NUMERIC .)
    FECHAPARENTESES reduce using rule 14 (tipo -> NUMERIC .)


state 21

    (15) tipo -> DATETIME .

    VIRGULA         reduce using rule 15 (tipo -> DATETIME .)
    NOT             reduce using rule 15 (tipo -> DATETIME .)
    NULL            reduce using rule 15 (tipo -> DATETIME .)
    FECHAPARENTESES reduce using rule 15 (tipo -> DATETIME .)


state 22

    (16) tipo -> NUMFLOAT .

    VIRGULA         reduce using rule 16 (tipo -> NUMFLOAT .)
    NOT             reduce using rule 16 (tipo -> NUMFLOAT .)
    NULL            reduce using rule 16 (tipo -> NUMFLOAT .)
    FECHAPARENTESES reduce using rule 16 (tipo -> NUMFLOAT .)


state 23

    (8) criartabela -> CREATE TABLE ID ABREPARENTESES tabelacolunas FECHAPARENTESES .

    CREATE          reduce using rule 8 (criartabela -> CREATE TABLE ID ABREPARENTESES tabelacolunas FECHAPARENTESES .)
    INSERT          reduce using rule 8 (criartabela -> CREATE TABLE ID ABREPARENTESES tabelacolunas FECHAPARENTESES .)
    $end            reduce using rule 8 (criartabela -> CREATE TABLE ID ABREPARENTESES tabelacolunas FECHAPARENTESES .)


state 24

    (9) inserirdados -> INSERT INTO ID VALUES ABREPARENTESES dadosinseridos . FECHAPARENTESES

    FECHAPARENTESES shift and go to state 34


state 25

    (10) dadosinseridos -> literal .
    (11) dadosinseridos -> literal . VIRGULA dadosinseridos

    FECHAPARENTESES reduce using rule 10 (dadosinseridos -> literal .)
    VIRGULA         shift and go to state 35


state 26

    (5) literal -> NUMFLOAT .

    VIRGULA         reduce using rule 5 (literal -> NUMFLOAT .)
    FECHAPARENTESES reduce using rule 5 (literal -> NUMFLOAT .)


state 27

    (6) literal -> NUMINTEIRO .

    VIRGULA         reduce using rule 6 (literal -> NUMINTEIRO .)
    FECHAPARENTESES reduce using rule 6 (literal -> NUMINTEIRO .)


state 28

    (7) literal -> STRING .

    VIRGULA         reduce using rule 7 (literal -> STRING .)
    FECHAPARENTESES reduce using rule 7 (literal -> STRING .)


state 29

    (20) tabelacolunas -> ID tipo sufixotable .
    (22) tabelacolunas -> ID tipo sufixotable . VIRGULA tabelacolunas

    FECHAPARENTESES reduce using rule 20 (tabelacolunas -> ID tipo sufixotable .)
    VIRGULA         shift and go to state 36


state 30

    (23) tabelacolunas -> ID tipo VIRGULA . tabelacolunas
    (20) tabelacolunas -> . ID tipo sufixotable
    (21) tabelacolunas -> . ID tipo
    (22) tabelacolunas -> . ID tipo sufixotable VIRGULA tabelacolunas
    (23) tabelacolunas -> . ID tipo VIRGULA tabelacolunas

    ID              shift and go to state 14

    tabelacolunas                  shift and go to state 37

state 31

    (17) sufixotable -> NOT . NULL
    (19) sufixotable -> NOT . NULL PRIMARY KEY

    NULL            shift and go to state 38


state 32

    (18) sufixotable -> NULL .

    VIRGULA         reduce using rule 18 (sufixotable -> NULL .)
    FECHAPARENTESES reduce using rule 18 (sufixotable -> NULL .)


state 33

    (13) tipo -> VARCHAR ABREPARENTESES . NUMINTEIRO FECHAPARENTESES

    NUMINTEIRO      shift and go to state 39


state 34

    (9) inserirdados -> INSERT INTO ID VALUES ABREPARENTESES dadosinseridos FECHAPARENTESES .

    CREATE          reduce using rule 9 (inserirdados -> INSERT INTO ID VALUES ABREPARENTESES dadosinseridos FECHAPARENTESES .)
    INSERT          reduce using rule 9 (inserirdados -> INSERT INTO ID VALUES ABREPARENTESES dadosinseridos FECHAPARENTESES .)
    $end            reduce using rule 9 (inserirdados -> INSERT INTO ID VALUES ABREPARENTESES dadosinseridos FECHAPARENTESES .)


state 35

    (11) dadosinseridos -> literal VIRGULA . dadosinseridos
    (10) dadosinseridos -> . literal
    (11) dadosinseridos -> . literal VIRGULA dadosinseridos
    (5) literal -> . NUMFLOAT
    (6) literal -> . NUMINTEIRO
    (7) literal -> . STRING

    NUMFLOAT        shift and go to state 26
    NUMINTEIRO      shift and go to state 27
    STRING          shift and go to state 28

    literal                        shift and go to state 25
    dadosinseridos                 shift and go to state 40

state 36

    (22) tabelacolunas -> ID tipo sufixotable VIRGULA . tabelacolunas
    (20) tabelacolunas -> . ID tipo sufixotable
    (21) tabelacolunas -> . ID tipo
    (22) tabelacolunas -> . ID tipo sufixotable VIRGULA tabelacolunas
    (23) tabelacolunas -> . ID tipo VIRGULA tabelacolunas

    ID              shift and go to state 14

    tabelacolunas                  shift and go to state 41

state 37

    (23) tabelacolunas -> ID tipo VIRGULA tabelacolunas .

    FECHAPARENTESES reduce using rule 23 (tabelacolunas -> ID tipo VIRGULA tabelacolunas .)


state 38

    (17) sufixotable -> NOT NULL .
    (19) sufixotable -> NOT NULL . PRIMARY KEY

    VIRGULA         reduce using rule 17 (sufixotable -> NOT NULL .)
    FECHAPARENTESES reduce using rule 17 (sufixotable -> NOT NULL .)
    PRIMARY         shift and go to state 42


state 39

    (13) tipo -> VARCHAR ABREPARENTESES NUMINTEIRO . FECHAPARENTESES

    FECHAPARENTESES shift and go to state 43


state 40

    (11) dadosinseridos -> literal VIRGULA dadosinseridos .

    FECHAPARENTESES reduce using rule 11 (dadosinseridos -> literal VIRGULA dadosinseridos .)


state 41

    (22) tabelacolunas -> ID tipo sufixotable VIRGULA tabelacolunas .

    FECHAPARENTESES reduce using rule 22 (tabelacolunas -> ID tipo sufixotable VIRGULA tabelacolunas .)


state 42

    (19) sufixotable -> NOT NULL PRIMARY . KEY

    KEY             shift and go to state 44


state 43

    (13) tipo -> VARCHAR ABREPARENTESES NUMINTEIRO FECHAPARENTESES .

    VIRGULA         reduce using rule 13 (tipo -> VARCHAR ABREPARENTESES NUMINTEIRO FECHAPARENTESES .)
    NOT             reduce using rule 13 (tipo -> VARCHAR ABREPARENTESES NUMINTEIRO FECHAPARENTESES .)
    NULL            reduce using rule 13 (tipo -> VARCHAR ABREPARENTESES NUMINTEIRO FECHAPARENTESES .)
    FECHAPARENTESES reduce using rule 13 (tipo -> VARCHAR ABREPARENTESES NUMINTEIRO FECHAPARENTESES .)


state 44

    (19) sufixotable -> NOT NULL PRIMARY KEY .

    VIRGULA         reduce using rule 19 (sufixotable -> NOT NULL PRIMARY KEY .)
    FECHAPARENTESES reduce using rule 19 (sufixotable -> NOT NULL PRIMARY KEY .)

